WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221844
[GPUP] Test webrtc/audio-video-element-playing.html fails when media in GPU Process is enabled
https://bugs.webkit.org/show_bug.cgi?id=221844
Summary
[GPUP] Test webrtc/audio-video-element-playing.html fails when media in GPU P...
Peng Liu
Reported
2021-02-12 13:48:25 PST
@@ -1,4 +1,4 @@ -PASS Verify that, contrary to video elements, audio elements are playing even if video tracks have not started generated any video frame +FAIL Verify that, contrary to video elements, audio elements are playing even if video tracks have not started generated any video frame assert_not_equals: got disallowed value 0
Attachments
Patch
(5.80 KB, patch)
2021-02-17 08:19 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2021-02-16 05:37:18 PST
It seems that on MacOS at least, "com.apple.audio.audiohald" is needed by ClockCM::ClockCM()
Radar WebKit Bug Importer
Comment 2
2021-02-16 05:37:33 PST
<
rdar://problem/74388532
>
youenn fablet
Comment 3
2021-02-17 08:19:33 PST
Created
attachment 420649
[details]
Patch
EWS
Comment 4
2021-02-18 00:53:11 PST
Committed
r273071
: <
https://commits.webkit.org/r273071
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 420649
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug