[GPUP] Test webrtc/audio-video-element-playing.html fails when media in GPU Process is enabled https://bugs.webkit.org/show_bug.cgi?id=221844 <rdar://problem/74388532>

Reviewed by Eric Carlson.

Source/WebCore:

Move from Clock to MonotonicTime since we do not need high precision anyway for MediaPlayerPrivateMediaStreamAVFObjC.
This allows not requiring access to the underlying coreaudio clock.
Covered by updated test.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaStreamAVFObjC.h:
* platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaStreamAVFObjC.mm:
(WebCore::MediaPlayerPrivateMediaStreamAVFObjC::MediaPlayerPrivateMediaStreamAVFObjC):
(WebCore::MediaPlayerPrivateMediaStreamAVFObjC::play):
(WebCore::MediaPlayerPrivateMediaStreamAVFObjC::currentMediaTime const):

LayoutTests:

* webrtc/audio-video-element-playing.html:


Canonical link: https://commits.webkit.org/234269@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@273071 268f45cc-cd09-0410-ab3c-d52691b4dbfc